--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a href="#2"><i class="fa fa-user"></i> <em>About</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Experience</em></a></li>
             <li><a href="#4"><i class="fa fa-certificate"></i> <em>Certifications</em></a></li>
-            <li><a href="#6"><i class="fa fa-cogs"></i> <em>Projects</em></a></li>
+            <li><a href="#"><i class="fa fa-cogs"></i> <em>Projects</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
           </ul>
         </nav>
@@ -92,14 +92,17 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="left-content">
-                                                <h2>Experience 1</h2>
-                                                <p>Vestibulum augue ex, finibus sit amet nisi id, maximus ultrices ipsum. Maecenas rhoncus nibh in mauris lobortis, a maximus diam faucibus. In et eros urna. Suspendisse potenti. Pellentesque commodo, neque nec molestie tempus, purus ante feugiat augue.</p>
+                                                <h2>ICT PRESALES ENGINEER</h2>
+                                                <p>JULY 2019 <br>BSNL RTTC, TRIVANDRUM <br>Dealt with various configurations and issues in networking and communication</p>
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
-                                            <div class="right-image">
-                                                <img src="img/first_service.jpg" alt="first service">
+                                            <div class="right-content">
+                                              <br>
+                                                <h2>Intern</h2>
+                                                <p>JULY 2019<br>BOSCH REXROTH CET, TRIVANDRUM <br>Worked on hydraulic and pneumatic systems and controlled them using PLC</p>
+                                                <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -109,14 +112,16 @@
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <div class="left-image">
-                                                <img src="img/second_service.jpg" alt="second service">
+                                            <div class="left-content">
+                                                <h2>Intern</h2>
+                                                <p>JUNE 2018 <br>KELTRON REC, THRISSUR <br>Assisted on projects based on embedded systems and power electronics</p>
+                                                <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="right-content">
-                                                <h2>Experience 2</h2>
-                                                <p>Sed vitae felis in lorem mollis mollis eget in leo. Donec commodo, ex nec rutrum venenatis, nisi nisl malesuada magna, sed semper ipsum enim a ipsum. Aenean in ante vel mi molestie bibendum. Quisque sit amet lacus in diam pretium faucibus. Cras vel justo lorem.</p>
+                                                <h2>Graphic designer</h2>
+                                                <p>JAN 2018 – MAR 2018 <br>VSSOL, BANGALORE <br>Worked as an intern under the promotion and marketing department of VSSOL</p>
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
