--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     <div class="col-md-6">
                         <div class="left-content">
                             <h2>About Me</h2>
-                            <p>Phasellus vitae faucibus orci. Etiam eleifend orci sed faucibus semper. Cras varius dolor et augue fringilla, eu commodo sapien iaculis. Donec eget dictum tellus. <a href="#">Curabitur</a> a interdum diam. Nulla vestibulum porttitor porta.</p>
-                            <p>Nulla vitae interdum libero, vel posuere ipsum. Phasellus interdum est et dapibus tempus. Vestibulum malesuada lorem condimentum mauris ornare dapibus. Curabitur tempor ligula et <a href="#">placerat</a> molestie.</p>
-                            <p>Aliquam efficitur eu purus in interdum. <a href="#">Etiam tincidunt</a> magna ex, sit amet lobortis felis bibendum id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                            <p>I am Laxmi Nag, usually I use my name in profiles as nagln. I am currently studying at College of Engineering Trivandrum. I am a developer, designer, singer, artist, thinker and student.</p>
+                            <p>My interests cover Electrical machines, power electronics, data structure and algorithms, machine learning + deep learning, graphic designing, web designing, app development, microcontroller circuits, etc</p>
+                            <p>Before enrolling into the BTech, I completed Post Graduation Diploma in Multimedia and Animation and also started working as a freelancer in various fields.</p>
                           <div class="main-btn"><a href="#3">Read More</a></div>
                       </div>
                     </div>
