--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                                 <div class="thumb">
                                     <a href="img/first_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number One</h2>
-                                            <p>Quisque sit amet lacus in diam pretium faucibus. Cras vel justo lorem.</p>
+                                            <h2>Functional programming principles in SCALA</h2>
+                                            <p>A course done in Coursera on SCALA programming language</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -157,8 +157,8 @@
                                 <div class="thumb">
                                     <a href="img/second_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Two</h2>
-                                            <p>Donec eget dictum tellus. Curabitur a interdum diam. Nulla vestibulum porttitor porta.</p>
+                                            <h2>Neural networks and Deep learning</h2>
+                                            <p>A course done in Coursera on Neural networks and Deep learning</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
