--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="item">
                                 <div class="thumb">
-                                    <a href="img/fpps.jpeg" data-lightbox="image-1"><div class="hover-effect">
+                                    <a href="img/fpps.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Functional programming principles in SCALA</h2>
                                             <p>A course done in Coursera on SCALA programming language</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
-                                        <img src="img/fpps.jpeg">
+                                        <img src="img/fpps.jpg">
                                     </div>
                                 </div>
                             </div>
