--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="item">
                                 <div class="thumb">
-                                    <a href="img/second_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                    <a href="img/nndl.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Neural networks and Deep learning</h2>
                                             <p>A course done in Coursera on Neural networks and Deep learning</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
-                                        <img src="img/second_item.jpg">
+                                        <img src="img/nndl.jpg">
                                     </div>
                                 </div>
                             </div>
