--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="item">
                                 <div class="thumb">
-                                    <a href="img/third_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                    <a href="img/tfps.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Three</h2>
-                                            <p>Cras varius dolor et augue fringilla, eu commodo sapien iaculis.</p>
+                                            <h2>TensorFlow in Practice Specialization</h2>
+                                            <p>A specialization consisting of four courses done in Coursera based on TensorFlow</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
-                                        <img src="img/third_item.jpg">
+                                        <img src="img/tfps.jpg">
                                     </div>
                                 </div>
                             </div>
