--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="item">
                                 <div class="thumb">
-                                    <a href="img/fourth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                    <a href="img/lehfs.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Four</h2>
-                                            <p>Vestibulum augue ex, finibus sit amet nisi id, maximus ultrices ipsum.</p>
+                                            <h2>Learn Ethical Hacking from Scratch</h2>
+                                            <p>A course done from Udemy covering basics of ethical hacking using Kali Linux</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
-                                        <img src="img/fourth_item.jpg">
+                                        <img src="img/lehfs.jpg">
                                     </div>
                                 </div>
                             </div>
