--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="item">
                                 <div class="thumb">
-                                    <a href="img/fifth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                    <a href="img/itfad.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Fifth Item</h2>
-                                            <p>Donec commodo, ex nec rutrum venenatis, nisi nisl malesuada magna.</p>
+                                            <h2>Introduction to Flutter App Development</h2>
+                                            <p>A course done from App Brewery in app development</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
-                                        <img src="img/fifth_item.jpg">
+                                        <img src="img/itfad.jpg">
                                     </div>
                                 </div>
                             </div>
