--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <li><a href="#2"><i class="fa fa-user"></i> <em>About</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Experience</em></a></li>
             <li><a href="#4"><i class="fa fa-certificate"></i> <em>Certifications</em></a></li>
-            <li><a href="#"><i class="fa fa-cogs"></i> <em>Projects</em></a></li>
-            <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
+            <li><a href="#5"><i class="fa fa-cogs"></i> <em>Projects</em></a></li>
+            <li><a href="#6"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
           </ul>
         </nav>
 
@@ -231,7 +231,7 @@
                 </div>
             </div>
           </div>
-          <div class="slide" id="5">
+          <div class="slide" id="6">
             <div class="content fifth-content">
                 <div class="container-fluid">
                     <div class="col-md-6">
