--- a/index.html
+++ b/index.html
@@ -231,6 +231,57 @@
                 </div>
             </div>
           </div>
+	<div class="slide" id="3">
+            <div class="content third-content">
+                <div class="container-fluid">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="first-section">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="left-content">
+                                                <h2>ICT PRESALES ENGINEER</h2>
+                                                <p>JULY 2019 <br>BSNL RTTC, TRIVANDRUM <br>Dealt with various configurations and issues in networking and communication</p>
+                                                <div class="main-btn"><a href="#4">Continue Reading</a></div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="right-content">
+                                              <br>
+                                                <h2>Intern</h2>
+                                                <p>JULY 2019<br>BOSCH REXROTH CET, TRIVANDRUM <br>Worked on hydraulic and pneumatic systems and controlled them using PLC</p>
+                                                <div class="main-btn"><a href="#4">Continue Reading</a></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="second-section">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="left-content">
+                                                <h2>Intern</h2>
+                                                <p>JUNE 2018 <br>KELTRON REC, THRISSUR <br>Assisted on projects based on embedded systems and power electronics</p>
+                                                <div class="main-btn"><a href="#4">Continue Reading</a></div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="right-content">
+                                                <h2>Graphic designer</h2>
+                                                <p>JAN 2018 – MAR 2018 <br>VSSOL, BANGALORE <br>Worked as an intern under the promotion and marketing department of VSSOL</p>
+                                                <div class="main-btn"><a href="#4">Continue Reading</a></div>
+                                            </div> 
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
           <div class="slide" id="6">
             <div class="content fifth-content">
                 <div class="container-fluid">
