--- a/index.html
+++ b/index.html
@@ -241,16 +241,16 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="left-content">
-                                                <h2>ICT PRESALES ENGINEER</h2>
-                                                <p>JULY 2019 <br>BSNL RTTC, TRIVANDRUM <br>Dealt with various configurations and issues in networking and communication</p>
-                                                <div class="main-btn"><a href="#4">Continue Reading</a></div>
+                                                <h2>Power Factor Improvement of Induction Motor</h2>
+                                                <p>JAN 2020 - Present <br>College of Engineering Trivandrum <br>Working on design of power electronic converters for improving the power factor of Induction motor</p>
+                                                <div class="main-btn"><a href="#6">Continue Reading</a></div>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="right-content">
                                               <br>
-                                                <h2>Intern</h2>
-                                                <p>JULY 2019<br>BOSCH REXROTH CET, TRIVANDRUM <br>Worked on hydraulic and pneumatic systems and controlled them using PLC</p>
+                                                <h2>Portable Wireless Multiple Power Transfer</h2>
+                                                <p>AUG 2019 - DEC 2019<br>College of Engineering Trivandrum<br>A wireless charger for charging smart phones which is designed as a power bank</p>
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
@@ -262,15 +262,15 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="left-content">
-                                                <h2>Intern</h2>
-                                                <p>JUNE 2018 <br>KELTRON REC, THRISSUR <br>Assisted on projects based on embedded systems and power electronics</p>
+                                                <h2>Facial Expression Recognition Using Keras</h2>
+                                                <p>May 2020 <br>Own project <br>Made a model that recognises the expressions on human face</p>
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="right-content">
-                                                <h2>Graphic designer</h2>
-                                                <p>JAN 2018 – MAR 2018 <br>VSSOL, BANGALORE <br>Worked as an intern under the promotion and marketing department of VSSOL</p>
+                                                <h2>Automatic Robotic Arm</h2>
+                                                <p>FEB 2019 <br>College of Engineering Trivandrum<br>A robotic arm controlled using arduino which is automated using ultrasonic sensor</p>
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div> 
                                         </div>
